--- a/evaluacion_APBD_InmaPerea.ipynb
+++ b/evaluacion_APBD_InmaPerea.ipynb
@@ -14,34 +14,83 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
     "# Tabla de contenidos\n",
     "\n",
     "1. [Descripción del problema](#descripcion)\n",
     "\n",
     "2. [Inicio sesión Spark](#inicio)\n",
     "\n",
-    "3. [Lectura de datos y exploración](#exploracion)\n",
+    "3. [Carga de libreías](#librerias)\n",
     "\n",
-    "4. [Preprocesado](#preprocesado)\n",
+    "4. [Métodos y variables reutilizables](#metodos_variables)\n",
+    "\t   \n",
+    "5. [Lectura de datos](#lectura)\n",
     "\n",
-    "    4.1. [Valores perdidos (missings)](#missings)\n",
-    "    \n",
-    "    4.2. [Conversión a tipo numérico](#numerico)\n",
-    "    \n",
-    "    4.3. [Escalado](#escalado)\n",
-    "    \n",
-    "    4.4. [Convertir features en vector](#features)\n",
-    "    \n",
-    "5. [Selección de variables](#seleccion)\n",
+    "6. [Exploración de los datos](#exploracion)\n",
     "\n",
-    "6. [Modelos](#modelos)\n",
-    "\n",
-    "    6.1. [Ajuste de parámetros](#ajuste)\n",
+    "7. [Valores perdidos](#missings)\n",
+    "\t\n",
+    "    7.1. [Variables con categoría NA válida](#na_valida)\n",
     "    \n",
-    "    6.2. [Evaluación](#evaluacion)\n",
-    "       \n",
-    "7. [Cierre sesión spark](#cierre)\n"
+    "\t7.2. [Variable missing *SalePrice*](#saleprice)\n",
+    "    \n",
+    "\t7.3. [Variables missing *Bsmt*](#bsmt)\n",
+    "    \n",
+    "\t7.4. [Variable missing *Electrical*](#electrical)\n",
+    "    \n",
+    "\t7.5. [Variables missing *Exterior*](#exterior)\n",
+    "    \n",
+    "\t7.6. [Variables missing *Garage*](#garage)\n",
+    "    \n",
+    "\t7.7. [Variable missing *KitchenQual*](#kitchenqual)\n",
+    "    \n",
+    "\t7.8. [Variable missing *SaleType*](#saletype)\n",
+    "    \n",
+    "\t7.9. [Variable missing *Functional*](#functional)\n",
+    "    \n",
+    "\t7.10. [Variable missing *Utilities*](#utilities)\n",
+    "    \n",
+    "\t7.11. [Variable missing *MSZoning*](#mszoning)\n",
+    "    \n",
+    "\t7.12. [Variables missing *MasVnr*](#masvnr)\n",
+    "    \n",
+    "\t7.13. [Variable missing *LotFrontage*](#lotfrontage)\n",
+    "    \n",
+    "\t7.14. [Imputación de valores perdidos](#imputacion)\n",
+    "\n",
+    "8. [Preprocesado](#preprocesado)\n",
+    "\t\n",
+    "    8.1. [Conversión a tipo numérico](#numerico)\n",
+    "    \n",
+    "\t8.2. [Selección de variables](#seleccion)\n",
+    "    \n",
+    "\t8.3. [Convertir features en vector](#features)\n",
+    "    \n",
+    "\t8.4. [Escalado](#escalado)\n",
+    "    \n",
+    "\t8.5. [Pipeline preprocesado](#pipeline)\n",
+    "    \n",
+    "\t8.6. [Entrenamiento del pipeline de preprocesado](#pipelinetrain)\n",
+    "    \n",
+    "\t8.7. [Transformación de los datos de entrenamiento](#pipelinetransform)\n",
+    "\n",
+    "9. [Matriz de correlaciones](#correlacion)\n",
+    "\n",
+    "10. [Modelos](#modelos)\n",
+    "\t\n",
+    "    10.1. [Preparación de datasets (train y validation)](#train_validation)\n",
+    "    \n",
+    "\t10.2. [RandomForestRegressor](#randomforest)\n",
+    "    \n",
+    "\t10.3. [Gradient-Boosted Trees Regressor (GBTs)](#gbt)\n",
+    "    \n",
+    "\t10.4. [Ajuste de parámetros](#ajuste)\n",
+    "        \n",
+    "\t10.5. [Evaluación de los modelos](#evaluacion)\n",
+    "\t\n",
+    "11. [Subida solución a Kaggle](#kaggle)\n",
+    "\n",
+    "12. [Cierre sesión spark](#cierre)"
    ]
   },
   {
@@ -203,7 +252,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id=\"reused\"></a>\n",
+    "<a id=\"metodos_variables\"></a>\n",
+    "\n",
     "# 4. Métodos y variables reutilizables"
    ]
   },
@@ -211,6 +261,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='metodos'></a>\n",
+    "\n",
     "## 4.1 Métodos"
    ]
   },
@@ -369,6 +421,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='variables'></a>\n",
+    "\n",
     "## 4.2 Variables"
    ]
   },
@@ -575,6 +629,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='exploracion'></a>\n",
+    "\n",
     "# 6. Exploración de los datos"
    ]
   },
@@ -1130,6 +1186,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='na_valida'></a>\n",
+    "\n",
     "## 7.1 Variables con categoría *NA* válida"
    ]
   },
@@ -1330,6 +1388,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='saleprice'></a>\n",
+    "\n",
     "## 7.2 Variable missing *SalePrice*"
    ]
   },
@@ -1505,6 +1565,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='bsmt'></a>\n",
+    "\n",
     "## 7.3 Variables missing *Bsmt*"
    ]
   },
@@ -1656,6 +1718,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='electrical'></a>\n",
+    "\n",
     "## 7.4 Variable missing *Electrical*"
    ]
   },
@@ -1917,6 +1981,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='exterior'></a>\n",
+    "\n",
     "## 7.5 Variables missing *Exterior*"
    ]
   },
@@ -2197,6 +2263,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='garage'></a>\n",
+    "\n",
     "## 7.6 Variables missing *Garage*"
    ]
   },
@@ -2566,6 +2634,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='kitchenqual'></a>\n",
+    "\n",
     "## 7.7 Variable missing *KitchenQual*"
    ]
   },
@@ -2747,6 +2817,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='saletype'></a>\n",
+    "\n",
     "## 7.8 Variable missing *SaleType*"
    ]
   },
@@ -2921,6 +2993,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='functional'></a>\n",
+    "\n",
     "## 5.9 Variable missing *Functional*"
    ]
   },
@@ -3135,6 +3209,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='utilities'></a>\n",
+    "\n",
     "## 7.10 Variable missing *Utilities*"
    ]
   },
@@ -3231,6 +3307,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='mszoning'></a>\n",
+    "\n",
     "## 7.11 Variable missing *MSZoning*"
    ]
   },
@@ -3397,6 +3475,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='masvnr'></a>\n",
+    "\n",
     "## 7.12 Variables missing *MasVnr*"
    ]
   },
@@ -3668,6 +3748,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='lotfrontage'></a>\n",
+    "\n",
     "## 7.13 Variable missing *LotFrontage*"
    ]
   },
@@ -3710,6 +3792,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='imputacion'></a>\n",
+    "\n",
     "## 7.14 Imputación de valores perdidos"
    ]
   },
@@ -4138,6 +4222,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='pipeline'></a>\n",
+    "\n",
     "## 8.5 Pipeline preprocesado"
    ]
   },
@@ -4179,6 +4265,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='pipelinetrain'></a>\n",
+    "\n",
     "## 8.6 Entrenamiento del pipeline de preprocesado"
    ]
   },
@@ -4209,6 +4297,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='pipelinetransform'></a>\n",
+    "\n",
     "## 8.7 Transformación de los datos de entrenamiento"
    ]
   },
@@ -4402,6 +4492,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='correlacion'></a>\n",
+    "\n",
     "# 9. Matriz de correlaciones"
    ]
   },
@@ -6351,7 +6443,7 @@
    "source": [
     "<a id=\"modelos\"></a>\n",
     "\n",
-    "# 8. Modelos"
+    "# 10. Modelos"
    ]
   },
   {
@@ -6365,7 +6457,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8.1 Preparación de datasets (train y validation)"
+    "<a id='train_validation'></a>\n",
+    "\n",
+    "## 10.1 Preparación de datasets (train y validation)"
    ]
   },
   {
@@ -6435,7 +6529,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8.2 RandomForestRegressor"
+    "<a id='randomforest'></a>\n",
+    "\n",
+    "## 10.2 RandomForestRegressor"
    ]
   },
   {
@@ -6710,7 +6806,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8.3 Gradient-Boosted Trees Regressor (GBTs)"
+    "<a id='gbt'></a>\n",
+    "\n",
+    "## 10.3 Gradient-Boosted Trees Regressor (GBTs)"
    ]
   },
   {
@@ -7106,14 +7204,15 @@
    "source": [
     "<a id=\"ajuste\"></a>\n",
     "\n",
-    "## 8.4 Ajuste de parámetros"
+    "## 10.4 Ajuste de parámetros"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 8.4.1 Ajuste RandomForestRegressor"
+    "<a id='ajusteRF'></a>\n",
+    "### 10.4.1 Ajuste RandomForestRegressor"
    ]
   },
   {
@@ -8654,7 +8753,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 8.4.2 Ajuste Gradient-Boosted Trees Regressor (GBTs)"
+    "<a id='ajusteGBT'></a>\n",
+    "\n",
+    "### 10.4.2 Ajuste Gradient-Boosted Trees Regressor (GBTs)"
    ]
   },
   {
@@ -9749,7 +9850,7 @@
    "source": [
     "<a id=\"evaluacion\"></a>\n",
     "\n",
-    "## 8.5 Evaluación de los modelos"
+    "## 10.5 Evaluación de los modelos"
    ]
   },
   {
@@ -9862,7 +9963,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 9. Subida solución a Kaggle"
+    "<a id='kaggle'></a>\n",
+    "\n",
+    "# 11. Subida solución a Kaggle"
    ]
   },
   {
@@ -10099,7 +10202,7 @@
    "source": [
     "<a id=\"cierre\"></a>\n",
     "\n",
-    "# 10. Cierre sesión spark"
+    "# 12. Cierre sesión spark"
    ]
   },
   {
@@ -10111,7 +10214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 251,
    "metadata": {
     "collapsed": false
    },
